# GoodAnki

./: .gitignore  README.md
.claude/: settings.local.json
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: import_export.py
backend/app/services/: apkg_exporter.py  apkg_parser.py
frontend/: app.json  package-lock.json  package.json
frontend/app/: _layout.tsx  import.tsx
frontend/app/(tabs)/: _layout.tsx  index.tsx  settings.tsx  stats.tsx
frontend/app/card/: create.tsx
frontend/app/deck/: [id].tsx
frontend/app/deck/[id]/: review.tsx
frontend/patches/: expo-sqlite+55.0.10.patch
frontend/src/components/review/: CardStack.tsx  SwipeCard.tsx  SwipeOverlay.tsx  UndoButton.tsx
frontend/src/db/: database.ts  seed.ts
frontend/src/db/queries/: cards.ts  decks.ts  reviewLog.ts  stats.ts
frontend/src/fsrs/: scheduler.ts
frontend/src/hooks/: useReviewSession.ts
frontend/src/stores/: reviewStore.ts
frontend/src/types/: index.ts
