[project]
name = "goodanki-backend"
version = "0.1.0"
description = "GoodAnki backend for .apkg import/export"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.18",
    "genanki>=0.13.0",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]
